# DevopsAutomate

./: .env.example  .gitignore  README.md  demo.html  pyproject.toml
config/: standards.yaml
src/: __init__.py  ai_assistant.py  azure_devops.py  cli.py  github_integration.py  models.py  qa_manager.py  standards.py
templates/: epic_template.md  feature_template.md  task_template.md  user_story_template.md
tests/: __init__.py  test_ai_assistant.py  test_azure_devops.py  test_github_integration.py  test_models.py  test_standards.py
